--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -8,6 +8,8 @@
     flex-direction: column;
 }
 .top {
+    display: flex;
+    align-items: center;
     padding: 0 8px 0 0;
     box-shadow: inset 0 -1px 0 0 var(--colors-grey400);
     background-color: var(--colors-white);
@@ -19,6 +21,8 @@
     background-color: var(--colors-grey100);
 }
 .bottom {
+    display: flex;
+    align-items: center;
     padding: 8px 12px;
     box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, 0.12);
     border-top: 1px solid var(--colors-grey300);
