--- a/src/data-workspace/title-bar.module.css
+++ b/src/data-workspace/title-bar.module.css
@@ -3,6 +3,7 @@
     grid-template-columns: max-content max-content max-content;
     align-items: center;
     grid-gap: var(--spacers-dp12);
+    margin-bottom: var(--spacers-dp12);
 }
 
 .workflowName {
