--- a/src/data-workspace/display.module.css
+++ b/src/data-workspace/display.module.css
@@ -2,7 +2,7 @@
     min-height: 360px;
     padding: var(--spacers-dp12) var(--spacers-dp8);
     background: white;
-    box-shadow: rgb(213, 221, 229) 0px -1px 0px 0px inset;
+    box-shadow: inset 0 -1px 0 0 var(--colors-grey400);
 }
 
 .chooseDataSet {
