--- a/src/top-bar/org-unit-select/org-unit-select.module.css
+++ b/src/top-bar/org-unit-select/org-unit-select.module.css
@@ -1,8 +1,11 @@
+.popoverContainer {
+    display: grid;
+    width: 400px;
+}
+
 .scrollbox {
-    min-width: 250px;
-    max-width: 500px;
-    min-height: 200px;
-    max-height: 500px;
+    min-height: 400px;
+    max-height: 70vh;
     overflow-y: auto;
-    padding: var(--spacers-dp8);
+    padding-top: var(--spacers-dp8);
 }
