--- a/src/top-bar/context-select/context-select.module.css
+++ b/src/top-bar/context-select/context-select.module.css
@@ -2,7 +2,7 @@
     all: unset;
     display: inline-flex;
     align-items: center;
-    padding: 6px 12px;
+    padding: 0 12px;
     font-size: 14px;
     line-height: 16px;
     min-height: 40px;
