fix(data set count label): adjust font-size / line-height (DHIS2-11680)

--- a/src/data-workspace/title-bar/title-bar.module.css
+++ b/src/data-workspace/title-bar/title-bar.module.css
@@ -17,5 +17,7 @@
     grid-template-columns: auto auto;
     align-items: center;
     grid-gap: var(--spacers-dp4);
-    color: var(--colors-grey600);
+    color: var(--colors-grey700);
+    font-size: 14px;
+    line-height: 16px;
 }
