--- a/src/data-workspace/display/table.module.css
+++ b/src/data-workspace/display/table.module.css
@@ -9,6 +9,14 @@ table.dataTable {
     width: auto;
 }
 
-td.labelCell {
+th.cell, td.cell {
+    height: auto;
+    min-height: 45px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+.labelCellContent, .labelCellContent {
+    display: block;
     max-width: 480px;
 }
