--- a/src/data-workspace/display/table.module.css
+++ b/src/data-workspace/display/table.module.css
@@ -9,14 +9,20 @@ table.dataTable {
     width: auto;
 }
 
-th.cell, td.cell {
+th.cell,
+td.cell {
     height: auto;
     min-height: 45px;
     padding-top: 14px;
     padding-bottom: 14px;
 }
 
-.labelCellContent, .labelCellContent {
+th.cell :global(.top) {
+    height: auto;
+}
+
+.labelCellContent,
+.labelCellContent {
     display: block;
     max-width: 480px;
 }
