fix: backport all recently applied fixes to the 2.37.0 release branch (#117)
* fix(approval-status-tag): fix time-ago messages (#87)

* fix(approval-status-tag): only process approvedAt if received

* fix(approval-status-tag): fix rounding in timezone offset calculation

* chore(release): cut 1.14.0 [skip ci]

# [1.14.0](https://github.com/dhis2/approval-app/compare/v1.13.1...v1.14.0) (2021-09-27)

### Bug Fixes

* **approval-status-tag:** fix time-ago messages ([#87](https://github.com/dhis2/approval-app/issues/87)) ([adb0d1d](https://github.com/dhis2/approval-app/commit/adb0d1d8676428d1e65de914617fd4bfa809faeb))
* **approval-status-tag:** unset max width of Tag component ([#67](https://github.com/dhis2/approval-app/issues/67)) ([6235aa4](https://github.com/dhis2/approval-app/commit/6235aa4e09fde8c63fc8fad3345d50f2f99c9aa0))
* **bottom-bar:** update button state before unmounting via refresh ([#66](https://github.com/dhis2/approval-app/issues/66)) ([854d3dc](https://github.com/dhis2/approval-app/commit/854d3dcf45a3af895b6c7dcad6b6c8a1ae01c80b))
* **clear all selections button:** make button "small" (DHIS2-11674) ([2ab2929](https://github.com/dhis2/approval-app/commit/2ab292982ba5e3996843532e91706fb9025b0068))
* **context select:** remove top/bottom padding ([009aa2a](https://github.com/dhis2/approval-app/commit/009aa2a7bf6085693ea5712bc64c6272357e1e4d))
* **data set count label:** adjust font-size / line-height (DHIS2-11680) ([819b93c](https://github.com/dhis2/approval-app/commit/819b93c5b26ce8fd69271afb31a38c44480ec4ef))
* **data set display table:** table should use only needed space (DHIS2-11678) ([68b7048](https://github.com/dhis2/approval-app/commit/68b7048fcd1b084d2aa7452942ac21604b7e835d))
* **status-tag:** adjust date/time for server-client timezone offset ([#74](https://github.com/dhis2/approval-app/issues/74)) ([ef1cafd](https://github.com/dhis2/approval-app/commit/ef1cafdbd8895e1b3e477c856a2e8436ffd05d5f))

### Features

* **data-w

--- a/src/data-workspace/display/table.module.css
+++ b/src/data-workspace/display/table.module.css
@@ -5,10 +5,8 @@
     font-weight: normal;
 }
 
-table.dataTable {
-    width: auto;
-}
-
-td.labelCell {
+.labelCellContent,
+.labelCellContent {
+    display: block;
     max-width: 480px;
 }
