--- a/src/data-workspace/display/display.module.css
+++ b/src/data-workspace/display/display.module.css
@@ -29,6 +29,7 @@
     align-items: center;
     justify-content: center;
     color: var(--colors-grey700);
+    gap: var(--spacers-dp12);
 }
 
 .noData {
