--- a/src/top-bar/workflow-select/workflow-select.module.css
+++ b/src/top-bar/workflow-select/workflow-select.module.css
@@ -3,3 +3,7 @@
     color: var(--colors-grey700);
     padding: var(--spacers-dp16) var(--spacers-dp8) var(--spacers-dp24);
 }
+.menu {
+    max-height: 70vh;
+    overflow-y: auto;
+}
